# easy_log

./: LICENSE  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/mochazi/easylog/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/cpp/core/include/: hello_world.hpp  log.hpp
Android/app/src/main/cpp/core/src/: hello_world.cpp  log.cpp
Android/app/src/main/cpp/utils/src/: test.cpp
Android/app/src/main/java/com/mochazi/easylog/: MainActivity.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/mochazi/easylog/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
easy_log/: CMakeLists.txt  main.cpp
easy_log/core/include/: headers.hpp  log.hpp
easy_log/utils/include/: test.hpp
easy_log/utils/src/: test.cpp
